src-ken&y/objects/Contract__c.object
<CustomObject>
    <customHelpPage>HelpPurchasingContract</customHelpPage>
    <description>This objects represents the purchase agreements created during the process of of supplier sourcing and contains the details of the sourcing such as amount/price agreed to, validity etc.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this contract is active or inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Expiration_Before_Days__c</fullName>
        <inlineHelpText>You can set an alert to remind you that the selected contract will expire in &lt;N&gt; days time.</inlineHelpText>
        <label>Alert Expiration Before (Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Tolerance__c</fullName>
        <description>the total amount of delta between a Supplier Invoice line compared to its related PO line</description>
        <inlineHelpText>The acceptable difference, expressed as an amount, between the sales order line and the related purchase order line. If you choose not to enter a tolerance amount, the system assumes zero tolerance.</inlineHelpText>
        <label>Amount Tolerance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Authorization</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Purchasing Contracts</relationshipLabel>
        <relationshipName>Purchasing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_End__c</fullName>
        <description>The date when the contract expires on.</description>
        <inlineHelpText>Date on which the contract ends. You can set the Alert Expiration Before to remind you about the expiration.</inlineHelpText>
        <label>Purchase Agreement End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Purchase Agreement Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <description>The date when the contract is valid from.</description>
        <label>Purchase Agreement Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporate_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Buyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchasing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Contract Invoices</relationshipLabel>
        <relationshipName>Contract_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FOB_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the FOB Terms table</description>
        <label>FOB Term</label>
        <referenceTo>FOB_Terms__c</referenceTo>
        <relationshipName>Purchase_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New field which is a look up, replaces old field by API name: Payment_Terms__c</description>
        <label>Payment Terms</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Purchasing Contracts</relationshipLabel>
        <relationshipName>Purchasing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Agreement_Value__c</fullName>
        <label>Purchase Agreement Value</label>
        <summarizedField>Contract_Line__c.Purchase_Agreement_Line_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Line__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PurchasedValue__c</fullName>
        <label>Purchased Value</label>
        <summarizedField>Contract_Line__c.PurchasedValue__c</summarizedField>
        <summaryForeignKey>Contract_Line__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity_Tolerance_Over__c</fullName>
        <description>the % that the QTY can be different (over) between SI line and PO line receipt QTY</description>
        <inlineHelpText>The quantity tolerance (over and under) between the sales order line and PO line helps you to control your order.The value is expressed as a percentage of the quantity.</inlineHelpText>
        <label>Quantity Tolerance Over %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remaining_Value__c</fullName>
        <formula>IF( (Purchase_Agreement_Value__c - PurchasedValue__c) &gt; 0 , Purchase_Agreement_Value__c - PurchasedValue__c  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_to_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facility to ship the goods to</description>
        <label>Ship-to Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipName>Purchase_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Determines the current status of the contract</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier associated with this contract</description>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Supplier__c.Type__c</field>
                <operation>equals</operation>
                <value>Purchasing</value>
            </filterItems>
            <filterItems>
                <field>Supplier__c.Hold_Purchasing__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save As Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transportation_Mode__c</fullName>
        <description>Designates transportation mode for the shipment</description>
        <label>Transportation Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIR</fullName>
                </value>
                <value>
                    <fullName>SHIP</fullName>
                </value>
                <value>
                    <fullName>TRCK</fullName>
                </value>
                <value>
                    <fullName>RAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price_Tolerance_Over__c</fullName>
        <description>the % that the unit price can be different (over) between SI line and PO line</description>
        <inlineHelpText>The price tolerance (over and under) between the sales order line and PO line helps you to control pricing.The value is expressed as a percentage of the unit price.</inlineHelpText>
        <label>Unit Price Tolerance Over %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Update_Open_PO_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Price on Open PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Purchase Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier__c</columns>
        <columns>Company__c</columns>
        <columns>Payment_Term__c</columns>
        <columns>Corporate_Buyer__c</columns>
        <columns>Remaining_Value__c</columns>
        <columns>Contract_Start__c</columns>
        <columns>Contract_End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>